--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,14 +55,5 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false,
-  "files.associations": {
-	"so_long.h": "c",
-	"array": "c",
-	"iterator": "c",
-	"string": "c",
-	"string_view": "c",
-	"vector": "c",
-	"string.h": "c"
-}
+  "C_Cpp_Runner.msvcSecureNoWarnings": false
 }
