--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,27 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false
+"C_Cpp_Runner.msvcSecureNoWarnings": false,
+"files.associations": {
+	"so_long.h": "c",
+	"__config": "c",
+	"algorithm": "c",
+	"array": "c",
+	"atomic": "c",
+	"chrono": "c",
+	"cmath": "c",
+	"functional": "c",
+	"istream": "c",
+	"iterator": "c",
+	"memory": "c",
+	"mutex": "c",
+	"ostream": "c",
+	"sstream": "c",
+	"string": "c",
+	"string_view": "c",
+	"tuple": "c",
+	"unordered_map": "c",
+	"utility": "c",
+	"vector": "c"
+}
 }
